syntax = "proto3";

message Simple {
  uint32 id = 1;
  bool is_simple = 2;
  string name = 3;
  repeated int32 sample_lists = 4;
}

// executar no bash
//cat simple.bin | protoc --decode_raw 
//cat simple.bin | protoc --decode=Simple simple.proto
//cat simple.bin | protoc --decode=Simple simple.proto > simple.txt
//cat simple.txt | protoc --encode=Simple simple.proto > simple.pb
